--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
-        <script src="app.js" charset="utf-8"></script>
+        <script src="/app.js" charset="utf-8"></script>
 
     </head>
 
     <body ng-controller="another as view">
 
         <h1>practice</h1> {{ test }}
+
+        <div>
+
+        </div>
 
     </body>
 
